[package]
name = "sanity-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.12.9", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1"
serde_json = "1.0"
serde = { version = "1.0.215", features = ["derive"] }
thiserror = "2.0.3"
