[package]
name = "sanity-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0.215", features = ["derive"] }
thiserror = "2.0.3"
url = "2.5.4"
reqwest = { version = "0.12.9", features = ["json"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
